fixed projectCard padding misalignment on mobile

--- a/src/components/common/style.scss
+++ b/src/components/common/style.scss
@@ -120,20 +120,19 @@ button {
 .project {
   background: white;
   max-width: 340px;
-  height: 100px;
+  margin: 20px 0;
   border-top: 5px solid $primary;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 5px 15px,
-    rgba(50, 50, 93, 0.1) 0px 15px 35px;
-  padding: 2.5rem 1.5rem;
-  cursor: pointer;
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  padding: 1.5rem 1.5rem;
   font-family: "Book", $defaultFont;
+  display: flex;
+  justify-content: space-evenly;
   flex-direction: column;
   -moz-box-orient: vertical;
   -moz-box-direction: normal;
-  display: flex;
-  justify-content: space-evenly;
-  margin: 20px 0;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 5px 15px,
+    rgba(50, 50, 93, 0.1) 0px 15px 35px;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
 
   &:hover {
     transform: translate(0, -10px);
@@ -147,7 +146,7 @@ button {
     font-family: "Bold", $defaultFont;
     font-size: 1.5rem;
     display: flex;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 
     img {
       width: 30px;
