--- a/src/components/section/footer/style.scss
+++ b/src/components/section/footer/style.scss
@@ -5,7 +5,6 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 100px 0;
-  outline: 1px solid;
   .text {
     margin: 0 auto;
     font-size: 17px;
@@ -22,8 +21,6 @@
   }
 
   .links {
-    // outline: 1px solid red;
-
     @media (max-width: 655px) {
       display: grid;
       width: 100%;
@@ -42,9 +39,7 @@
 }
 
 .pxw {
-  outline: 1px solid red;
   display: block;
-
   @media (max-width: 490px) {
     width: 100%;
   }
